--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,5 @@
-
+{ 
+    "code-runner.showRunIconInEditorTitleMenu": true, 
+    "code-runner.runInTerminal": true, 
+    "terminal.integrated.fontSize": 16 
+} 
